--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/rocket/style.css">
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
         integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
@@ -66,7 +66,7 @@
             <div class="col-12 col-sm-12 col-lg-6">
                 <div class="main-content mt-5">
 
-                    <img src="/index-mockup.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="500"
+                    <img src="/rocket/index-mockup.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="500"
                         height="500" loading="lazy">
                 </div>
             </div>
@@ -140,7 +140,7 @@
 
     </div>
     <div class="container-fluid col-md-11 mt-5 col-11 px-4 shadow-lg p-3 mb-5 py-5 mt-3 bg-white rounded">
-        <img src="/dashboard-gif-ok.gif" class="img-fluid img-gif" alt="" srcset="">
+        <img src="/rocket/dashboard-gif-ok.gif" class="img-fluid img-gif" alt="" srcset="">
     </div>
 
     <div class="container-fluid con-box  px-4 shadow-lg p-3 mb-5 py-5 mt-3 bg-primary">
@@ -383,7 +383,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
-    <script src="/java.js"></script>
+    <script src="/rocket/java.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
